--- a/app/src/main/res/layout/activity_game_settings.xml
+++ b/app/src/main/res/layout/activity_game_settings.xml
@@ -14,7 +14,8 @@
         android:layout_margin="10dp"
         android:textSize="20sp" />
 
-   <ListView
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/game_settings_packages_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
@@ -22,7 +23,7 @@
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1">
-   </ListView>
+   </android.support.v7.widget.RecyclerView>
 
     <Button
         android:id="@+id/settings_next"
