--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activitys.MainActivity"
     android:orientation="vertical"
-    android:background="#198050">
+    android:background="#f1ebeb">
+    <ImageView
+        android:layout_weight="1"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:src="@drawable/app_background"
+        android:layout_gravity="center"/>
+
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@drawable/ic_launcher_foreground">
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="center">
         <Button
             android:id="@+id/main_menu_new_game"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
             android:layout_marginBottom="50dp"
             android:text="neues Spiel"
             android:textSize="30sp"
@@ -30,11 +36,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="50dp"
             android:text="pakete managen"
             android:textSize="30sp"
             android:background="#00000000"
             android:shadowColor="@color/colorPrimary"/>
     </LinearLayout>
-</RelativeLayout>
+
+</LinearLayout>
