--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activitys.GameActivity"
-    android:background="#198050">
+    android:background="#f1ebeb">
 
     <TextView
         android:id="@+id/game_player"
