--- a/app/src/main/res/layout/activity_player_selection.xml
+++ b/app/src/main/res/layout/activity_player_selection.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".Activitys.MainActivity"
     android:orientation="vertical"
-    android:background="#198050">
+    android:background="#f1ebeb">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
