--- a/app/src/main/res/layout/activity_package_editor.xml
+++ b/app/src/main/res/layout/activity_package_editor.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activitys.PackageEditorActivity"
-    android:background="#f1ebeb">
+    android:background="#f1ebeb"
+    android:orientation="horizontal"
+    tools:context=".Activitys.PackageEditorActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/package_editor_card_list"
-        android:layout_width="match_parent"
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:background="#00000000">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/package_editor_card_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00000000" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/package_editor_add_card"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:srcCompat="@android:drawable/ic_input_add" />
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
 </LinearLayout>
