-added button styles\n-adjusted ui inGame\n-adding new Players works by now

--- a/app/src/main/res/layout/activity_game_settings.xml
+++ b/app/src/main/res/layout/activity_game_settings.xml
@@ -32,6 +32,6 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:layout_gravity="end"
-        android:background="#00000000"
+        style="@style/Button_Frame_Gold"
         android:text="weiter" />
     </LinearLayout>
