--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,52 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activitys.GameActivity"
-    android:background="#f1ebeb">
+    android:background="#f1ebeb"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/game_player"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
-        android:layout_centerHorizontal="true"
         android:textSize="20sp"
+        android:layout_gravity="center"
         android:text="Spieler"/>
-
-    <TextView
-        android:id="@+id/game_question"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:textSize="25sp"
-        android:text="Frage"/>
-
-    <Button
-        android:id="@+id/game_next_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="nächstes"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="10dp"
-        android:background="#00000000"/>
-
-    <Button
-        android:id="@+id/game_prev_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="letztes"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="10dp"
-        android:background="#00000000"/>
+        android:layout_weight="1">
 
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            style="@style/Button_Frame_Gold">
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/game_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="25sp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:text="Statement:" />
+            <TextView
+                android:id="@+id/game_question"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="25sp"
+                android:textColor="#000000"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:text="Frage" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:gravity="center">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            style="@style/Button_Frame_Gold"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/game_sips"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="40sp"
+                android:text="3"
+                android:textColor="#000000" />
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:textSize="25sp"
+                android:text="Schlücke" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center">
+        <Button
+            android:id="@+id/game_prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="letztes"
+            android:layout_marginStart="10dp"
+            android:textColor="#000000"
+            style="@style/Widget.AppCompat.Button.Borderless"/>
+        <Button
+            android:id="@+id/game_next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="nächstes"
+            android:layout_marginEnd="10dp"
+            android:textColor="#000000"
+            style="@style/Widget.AppCompat.Button.Borderless"/>
+    </LinearLayout>
+
+
+
+</LinearLayout>
