--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:background="#f1ebeb"
     android:orientation="vertical"
-    android:theme="@style/AppTheme.AppBarOverlay"
     tools:context=".Activitys.MainActivity">
 
     <ImageView
@@ -14,19 +13,20 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_margin="20dp"
-        android:layout_weight="5"
+        android:layout_weight="100"
         android:src="@drawable/app_icon_beer_transparent" />
 
 
     <Button
         android:layout_weight="1"
         android:id="@+id/main_menu_manage_packages"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
         android:layout_gravity="center"
-        android:background="#00000000"
-        android:shadowColor="@color/colorPrimary"
-        android:text="pakete managen"
+        android:text="  pakete managen  "
+        style="@style/Button_Frame_Gold"
         android:textSize="30sp" />
 
 
