--- a/app/src/main/res/layout/activity_new_card.xml
+++ b/app/src/main/res/layout/activity_new_card.xml
@@ -55,5 +55,6 @@
         android:id="@+id/new_card_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hinzufügen"/>
+        android:text="hinzufügen"
+        style="@style/Button_Frame_Gold"/>
 </LinearLayout>
