--- a/app/src/main/res/layout/activity_package_manager.xml
+++ b/app/src/main/res/layout/activity_package_manager.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,7 +22,7 @@
                 android:id="@+id/package_manager_package_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#00000000"/>
+                android:background="#00000000" />
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/package_manager_add_package"
@@ -41,32 +40,44 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/package_manager_merge"
-            android:layout_width="100dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:text="verschmelzen"
-            android:textSize="14sp"
-            style="@style/Widget.AppCompat.Button.Borderless"/>
+            android:layout_weight="1">
 
-        <Button
-            android:id="@+id/package_manager_delete"
-            android:layout_width="100dp"
+            <Button
+                android:id="@+id/package_manager_merge"
+                style="@style/Button_Frame_Gold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="10dp"
+                android:text="verschmelzen"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:text="löschen"
-            android:textSize="14sp"
-            style="@style/Widget.AppCompat.Button.Borderless"/>
+            android:layout_weight="1">
+
+            <Button
+                android:id="@+id/package_manager_delete"
+                style="@style/Button_Frame_Gold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginBottom="10dp"
+                android:text="löschen"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+
     </LinearLayout>
 </LinearLayout>
