--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,11 +13,16 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Button_Frame_Gold" >
+    <style name="Button_Frame_Gold">
         <item name="android:textColor">#000000</item>
         <item name="android:background">@drawable/custom_button_background</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
     </style>
 
+
+    <style name="Montserrat_Font">
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
