--- a/app/src/main/res/layout/activity_package_manager.xml
+++ b/app/src/main/res/layout/activity_package_manager.xml
@@ -29,6 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                app:elevation="0dp"
                 app:srcCompat="@android:drawable/ic_input_add" />
 
         </LinearLayout>
