--- a/app/src/main/res/layout/activity_new_card.xml
+++ b/app/src/main/res/layout/activity_new_card.xml
@@ -5,56 +5,79 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activitys.NewCardActivity"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="erstelle eine neue karte"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="text:"/>
-    <EditText
-        android:id="@+id/new_card_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+    android:orientation="horizontal">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="schlücke:"/>
-        <EditText
-            android:id="@+id/new_card_sip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Kategorie:"/>
-        <Spinner
-            android:id="@+id/new_card_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/new_card_save"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="hinzufügen"
-        style="@style/Button_Frame_Gold"/>
+        android:layout_gravity="center"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            style="@style/Button_Frame_Gold"
+            android:layout_gravity="center">
+
+            <EditText
+                android:id="@+id/new_card_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="#00000000"
+                android:hint="ERSTELLE DEINE EIGNEN KARTE"
+                android:textSize="20sp"
+                android:maxLines="10"
+                android:inputType="textMultiLine"
+                android:maxLength="200"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="SCHLÜCKE:"
+                style="@style/TextViewFontColor"
+                android:textSize="20sp"/>
+            <EditText
+                android:id="@+id/new_card_sip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:maxLength="2"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="KATEGORIE:"
+                style="@style/TextViewFontColor"
+                android:textSize="20sp"/>
+            <Spinner
+                android:id="@+id/new_card_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/new_card_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="  hinzufügen  "
+            style="@style/Button_Frame_Gold"
+            android:layout_gravity="center"/>
+    </LinearLayout>
+
+
 </LinearLayout>
