--- a/app/src/main/res/layout/package_list_item.xml
+++ b/app/src/main/res/layout/package_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:textSize="25sp"
-        android:fontFamily="@font/montserrat_medium"
+        style="@style/TextViewFontColor"
         android:background="#00000000"/>
 
     <android.support.v7.widget.AppCompatCheckBox
