--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -84,6 +84,7 @@
                 style="@style/TextViewFontColor"/>
 
             <TextView
+                android:id="@+id/game_sips_info"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
