removing and edititng cards as well as saving and retrieving friends works now

--- a/app/src/main/res/layout/activity_package_editor.xml
+++ b/app/src/main/res/layout/activity_package_editor.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f1ebeb"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".Activitys.PackageEditorActivity">
 
     <android.support.v4.widget.NestedScrollView
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
         android:layout_weight="1">
 
@@ -36,5 +36,14 @@
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
+
+    <Button
+        android:id="@+id/package_editor_delete_card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Löschen"
+        style="@style/Button_Frame_Gold"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="10dp"/>
 
 </LinearLayout>
